src/bootstrap/css/main.css
/* ... */
//ul.ticket-event-dp :hover
//{
//background:#DB787D;
//}

.blog-container{
padding:0 50px; 
margin-top: -100px;
}

.blog-header{
height: 160px;
}

.related-blog-small{
display:none;
}

.pagenumber{
background:transparent !important;
}
.pagenumber:hover{
background:rgb(241,242,242) !important;
}

.marquee {
    width: 80%;
    //margin: 0 auto;
    white-space: nowrap;
    overflow: hidden;
    box-sizing: border-box;
    //border: 1px #414042 solid;
	background:rgba(255,255,255,0.3);
	padding:10px;
	border-top-right-radius:8px;
	border-bottom-right-radius:8px;

}
.eventlist{
margin-left:-50px;
}

@media (max-width: 1025px){
  .eventlist{
    margin-left: -150px;
  }
  .col-hide{
    display: none;
  }
/*>>>>>>> tony_dev*/

@media (max-width:990px){
	.footer-link{
	display:initial;
	}
}
/* For tablet*/
@media (max-width:800px){
	.create-form-border{
	border-left:none;
	}
	.create-form-border-left{
	border-right:none;
	}
	.cwrev_select{
	padding-left:1%;
	}
	.notification{
	padding:0 15%;
	}
	.header-link{
	display:initial;
	}	
	.profile-image{
	 margin-left:-15px;
	 margin-top:15px;
	 width:130px;
	 height:130px;
	 
	}
	.profile-fullname{
	padding:20px;
	}
	.message_section{
	margin-top:-50px;
	}
	.message_section2{
	margin-top:-50px;
	}
	.quote-box{
	margin-left:140px;
	}
	.col-hide{
	display:none;
	}
	.event-full-view-container{
	width:auto;
	}
	.event-type-image{
 	margin-left:0;
 	margin-top:-20px;
	}
	.event-stuff{
	margin-top:25px;
	}
	.status-bar{
	border-top-right-radius:0;
	}
	.hide-line{
	margin-top:-190px;
	}
	.comment_section{
	width:75%;
	}
	.vault{
	display:none;
	}
	.w_logo{
	width:70px;
	}
	.title{
	font-size:35px;
	}
	.pricing-points{
	margin-left: 5%;
	}
	.notlogged{
	display:none;
	}
	.aboutus-info{
	margin-top:15px;
	}
	.about-tabs{
	margin-left:1%;
	}
	.post-comment-btn{
	font-size:18px;
	}

	.inbox-btn{
	display:none;
	}
	.blog-header{
	height: auto;
	}
	.hidden-bar{
	display:none;
	}
	.related-blog{
	display:none;
	}
	.related-blog-small{
	display:initial;
	}
	.marquee {
    width: 60%;
	}
}



@media (max-width: 603px){
	.star1{
	display:none;
	}
	.star2{
	display:initial;
	}
	.middle-line{
	border-right-style: none;	
	border-right-color: none;
	border-right-width: none;
	}
	.event-title{
	font-size:22px;
	}
	.hide-line{
	visibility:hidden;
	}
	.pricing-points{
	margin-left: 25%;
	}
	.blog-container{
	padding:0; 
	margin-top: -100px;
	}
}

@media (max-width:533px){
	.attending-line{
	margin-top:-190px;
	}
	.event-comment-section{
	margin-left:10%;
	}
	
	.definition{
	text-align:center;
	font-size:25px;
	color:white;
	width:100%;
	margin-left:auto;
	margin-right:auto;
	}
	

}

/*Iphone 6 + Iphone plus*/
@media (max-width: 450px) and (min-width:361px){
	
	.sub>a.tab{
	font-size:19px;
	}
	.wrevel_logo{
	margin-left:-63px;
	}
	.event-stuff{
	margin-top:100px;
	}
	.comment_section{
	height:300px;
	width:90%;
	}
	
	.small{
	float:left;
	}
	.cwrev_category{
	width:85px;
	height:85px;
	//width:65px;
	//height:65px;
	}
	.notify_header{
	font-size:22px;
	}
	.profile-name{
	margin-top:100px;
	}
	.profile-image{
	margin-top:-30px;
	margin-left:auto;
	margin-right:auto;
	margin-left:33%;
	width:115px;
	height:115px;
	}
	.quote-box{
	margin-left:10%;
	}
	.info-hidden {
    	display: none;
	}
	.profile-fullname, .reputation{
	font-size:25px;
	}
	.event-stuff{
		margin-top:90px;
	}
	.event-type-image{
	margin-left:33%;
	width:120px;
	margin-top:-30px;
	}
	.featured_category{
	height:550px;
	}
	.line {
	display: none;
	}
	button.evtlistingbtn{
	background:white;
	position:absolute;
	//margin-top:65px;
	margin-left:-105px;
	margin-top:-60px;
	}
	
	.title{
	font-size:30px;
	}
	.w_logo{
	width:58px;
	}
	.pricing-points{
	margin-left: 10%;	
	}
	.wrev-tabs{
	font-size:15px;
	}
	.post-comment-btn{
	font-size:15px;
	margin-top:10px;
	}
	.user-posted{
	width:80px; 
	height:80px;
	}
	.username-posted{
	font-size:20px;
	}
	.event-post-textarea{
	font-size:15px; 
	width:90%;
	}
	.pricing-icon{
	width:40px;
	}
	.free-events{
	font-size:25px;
	}

	.free-events-descript{
	font-size:19px;
	padding:0;
	}
	
	.pricing-header{
	font-size: 24px;
	}
	.fees{
	font-size: 28px;
	}
	.ticket-pricing{
	font-size: 60px;
	}

	.example-text{
	font-size: 21px;
	}

	.example-number{
	font-size: 23px;
	}
	.event-post-btn{
	font-size:15px;
	}



	
  }
/*>>>>>>> tony_dev*/
}
@media (width:375px){
	.event-type-image{
	margin-left:30%;
	width:118px;
	margin-top:-30px;
	}
	.wrev-tabs{
	font-size:13px;
	}
	.post-input{
	margin-left:0px;
	}
	.post-textarea{
	width:180px;
	}
	.cwrev_category{
	width:78px;
	height:78px;	
	}
	.event-comment-input{
	width:55%;
	}
}
/* ... */

